footer spacing fix

--- a/style.scss
+++ b/style.scss
@@ -337,4 +337,9 @@ a:hover {
 
 .footer-menu {
   text-align: center;
+  margin-bottom: 15px;
+
+  a {
+    padding: 0px 5px;
+  }
 }
